style: fixes scrollbar x overflow

--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -2,7 +2,6 @@
   position: sticky;
   top: 0px;
   z-index: 30;
-  width: calc(100vw - 15px);
 }
 
 @media (hover: none) {
